Add multiuser support for UI log view (#3703)
* Using IDs to achieve multi-user support

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

* Remove log cache when limit reached client-side

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

* Managed ID overflow

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

* Added log message

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>

* Used more efficient data structures operations for caches

Signed-off-by: Marcello Martina <martina.marcello.rinaldo@outlook.com>